feat(service): refactor CourseService to use CourseDTO and UUID for course operations